--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,14 @@
   <packaging>pom</packaging>
   <name>Primer artefacto creado con mave + eclipse + github</name>
   <modules>
-  	<module>pruebas</module>
+  	<!-- <module>pruebas</module> -->
   	<module>app-web</module>
   	<module>app-domain</module>
   </modules>
+  
+  	<properties>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
+	</properties>
+	
 </project>
